--- a/alts.ipynb
+++ b/alts.ipynb
@@ -76,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Determine beta value to use for calculations\n",
@@ -89,7 +91,7 @@
     "        beta_lookup = equity_calcs.df_beta_reference_us.loc[name, df_alts_us.loc[name,'Beta Relative To']]\n",
     "        beta_to_use_us.append(beta_lookup)\n",
     "    \n",
-    "df_alts_us['Beta To Use'] = beta_to_use_us\n"
+    "df_alts_us['Beta To Use'] = beta_to_use_us"
    ]
   },
   {
