--- a/cma_gui.ipynb
+++ b/cma_gui.ipynb
@@ -173,9 +173,9 @@
     "     'Global Corporate Ex-US':\n",
     "        ['I16598 Index', 'Global Aggregate Ex-US', 'NonUS', 0.30, 50.0],\n",
     "     'Emerging Markets Sovereign USD': \n",
-    "        ['BSSUTRUU Index', 'Global Aggregate Ex-US', 'EM', 0.85, 50.0],\n",
+    "        ['BSSUTRUU Index', 'Global Aggregate Ex-US', 'US', 0.85, 50.0],\n",
     "     'Emerging Markets Corporate USD': \n",
-    "        ['BSEKTRUU Index', 'Global Aggregate Ex-US', 'EM', 1.40, 50.0],\n",
+    "        ['BSEKTRUU Index', 'Global Aggregate Ex-US', 'US', 1.40, 50.0],\n",
     "     'Emerging Markets Sovereign Local Currency': ['EMLCTRUU Index', 'Global Aggregate Ex-US', 'EM', 0.85, 50.0],\n",
     "    }\n",
     "\n",
@@ -399,10 +399,12 @@
     "              [sg.T('', **bw), \n",
     "               sg.T('US', **bw), \n",
     "               sg.T('Global', **bw), \n",
+    "               sg.T('Global ex-US', **bw), \n",
     "               sg.T('Emerging', **bw)],       \n",
     "              [sg.T('Term Premium Adjust (%)', **bw), \n",
     "               sg.Combo(values=value_range, default_value=0, **bw, key='us_theme_tp_adjust'),\n",
     "               sg.Combo(values=value_range, default_value=0, **bw, key='gl_theme_tp_adjust'),\n",
+    "               sg.Combo(values=value_range, default_value=0.25, **bw, key='gl_exus_theme_tp_adjust'),\n",
     "               sg.Combo(values=value_range, default_value=0, **bw, key='em_theme_tp_adjust')],\n",
     "\n",
     "              [sg.T('', **bw), \n",
