--- a/data_pull.ipynb
+++ b/data_pull.ipynb
@@ -872,7 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMA_New\\\\Data\\\\bloomberg_data_usd.xlsx') as writer:\n",
+    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\bloomberg_data_usd.xlsx') as writer:\n",
     "    equity_returns.to_excel(writer, sheet_name='equity_returns')\n",
     "    fixed_returns.to_excel(writer, sheet_name='fixed_returns')\n",
     "    fixed_yields.to_excel(writer, sheet_name='fixed_yields')\n",
@@ -887,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMA_New\\\\Data\\\\bloomberg_data_nonus.xlsx') as writer:\n",
+    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\bloomberg_data_nonus.xlsx') as writer:\n",
     "    equity_returns_nonus.to_excel(writer, sheet_name='equity_returns')\n",
     "    fixed_returns_nonus.to_excel(writer, sheet_name='fixed_returns')\n",
     "    fixed_yields_nonus.to_excel(writer, sheet_name='fixed_yields')\n",
@@ -903,7 +903,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMA_New\\\\Data\\\\term_structure_data.xlsx') as writer:\n",
+    "with pd.ExcelWriter(r'P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\term_structure_data.xlsx') as writer:\n",
     "    aa_corp_spread.to_excel(writer, sheet_name='aa_corp_spread')\n",
     "    fixed_treasury_yld.to_excel(writer, sheet_name='us_treas_yld')\n",
     "    fixed_treasury_dur.to_excel(writer, sheet_name='us_treas_dur')\n",
@@ -943,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
