--- a/equity_calcs.ipynb
+++ b/equity_calcs.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import cma_gui as cma\n",
+    "import fixed_income_calcs\n",
     "import std_dev\n",
     "\n",
     "import pandas as pd"
@@ -69,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Calculate building block asset classes\n",
-    "cash = 2.60\n",
+    "cash = fixed_income_calcs.fixed_returns_us['U.S. Treasury Bills']*100\n",
     "\n",
     "us_equity_return = cma.val_dict['us_inflation'] + cma.val_dict['us_reg'] + cma.val_dict['us_equity_income'] +\\\n",
     "    cma.val_dict['us_equity_val'] + cma.val_dict['us_equity_buyback']\n",
@@ -180,7 +181,7 @@
    "outputs": [],
    "source": [
     "# Calculate building block asset classes\n",
-    "cash_nonus = 2.50\n",
+    "cash_nonus = fixed_income_calcs.fixed_returns_us['U.S. Treasury Bills']*100\n",
     "\n",
     "us_equity_return = cma.val_dict['us_inflation'] + cma.val_dict['us_equity_income'] + cma.val_dict['us_equity_buyback'] +\\\n",
     "                    cma.val_dict['us_real_gdp'] + cma.val_dict['us_equity_val']\n",
